<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    
    <string name="app_name">ABradio</string>
    <string name="tab_1_title">Home</string>
    <string name="tab_2_title">Oblíbené</string>
    <string name="tab_3_title">Poslouchané</string>
    <string name="tab_4_title">Web</string>          
    <string name="hraje">hraje</string>
    <skip/>
    <string name="settings">Settings</string>       
<string name="empty"/>
<string name="prave_hraje">Prave hraje</string>
<string name="nezhas">Nezhasinat</string>
<string name="zhas">Zhasinat</string>
<string name="nezhas_title">Nezhasinat display</string>
<string name="nezhas_det">Pri prehravani radia a zaplem playeru nezhasinat display</string>
<string name="only_wifi_set">Pouze WiFi</string>
<string name="wifi_not">Jakakoliv sit</string>
<string name="wifi_title">Hrát pouze přes WiFi</string>
<string name="max_list_title">Počet poslouchaných v historii</string>
<string name="lepsi_img">Lepsi rozliseni</string>
<string name="small_img_art">Mensi obrazek</string>
<string name="img_art_3g_set_title">Na 3G preferovat lepsi kvalitu obrazku</string>
<string name="nastaverni_menu">Nastaveni</string>
<string name="loading_str">loading...</string>
<string name="abradio_title">ABradio</string>
<string name="contakt_text">Pro společnost MMS, a.s. vytvořil DigitalScope.cz</string>
<string name="mail_predmet">Zpráva z aplikace</string>
<string name="mail_body">Text k odeslaní z aplikace ABRadio pro android</string>
<string name="mail_zaslat">Poslat zprávu...</string>
<string name="mail_chyba">Nerní naistalovaný žádný poštovní klient.</string>	
<string name="chyba_title">Chyba</string>
<string name="nejsou_data">Pro praci aplikace musi byt nactena data ze serveru. Pripojte se k internetu a spustne aplikaci znova.</string>
<string name="stopapp_btn">ukoncit aplikaci</string>
<string name="chyba_uloz_obl">Chyba pri ukladani oblibenych.</string>
    <string name="chyba_uloz_list">Chyba pri ukladani poslouchanych.</string>
    <string name="chyba_start_stream">Chyba pri priprave streamu:</string>
    <string name="chyba_str">Chyba stavu streamu:</string>
    <string name="chyba_nac_str">Chyba nacitani streamu:</string>
    <string name="chyba_meta_str">Chyba cteni metadat streamu:</string>
    <string name="chyba_state">Chyba stavu pripravy radia</string>
    <string name="err_start">Chyba pripravy spusteni radia</string>
    <string name="only_wifi_seting_str">V nastaveni neni povoleno prehravani pres mobilni sit. Poze WiFi.</string>
    <string name="err_notify">Chyba pripravy notifikace</string>
    <string name="err_set_fav">Chyba uloziste oblibenych</string>
    <string name="err_set_list">Chyba pri vlozeni poslouchanych.</string>
<string name="err_stream">Neresitelna chyba streamu (Neni podporovan format zarizenim):</string>
</resources>
